# task_tracker_synchronizer

./: .gitignore  Dockerfile  Performance report.html  README.md  pyproject.toml  requests.csv
.github/workflows/: dart.yml  main.yaml
config/: config.json  rules.json
frontend/: .gitignore  pubspec.yaml
frontend/lib/: api.dart  main.dart
frontend/lib/models/: rule.dart  rule.freezed.dart  rule.g.dart  tasks_sync.dart  tasks_sync.freezed.dart  tasks_sync.g.dart
frontend/lib/presentation/: add_rules_screen.dart  all_rules_list.dart  all_rules_screen.dart  arrowed_texts.dart  relation_type_contructor.dart  selected_rule.dart  selected_task_screen.dart
frontend/lib/presentation/cubits/: rules_cubit.dart  selected_rule_cubit.dart
frontend/lib/presentation/models/: async_data.dart  relation.dart
frontend/test/: api_test.dart  api_test.mocks.dart
src/: api_functions.py  main.py  streamlit_page.py  synchronizer.py  test_api_functions.py  test_main.py  test_synchronizer.py
src/UI/: abstract_page.py  generate_new_rule_screen.py  main_screen.py
tests/: locustfile.py  test_api_functions.py  test_main.py  test_synchronizer.py
