[tool.poetry]
name = "task-tracker-synchronizer"
version = "0.1.0"
description = ""
authors = ["SokolOFFF <egor1sokolov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
fastapi = "^0.110.2"
requests = "^2.31.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
